Ios right white space fix

--- a/frontend/app/item/items.component.scss
+++ b/frontend/app/item/items.component.scss
@@ -64,6 +64,14 @@ Button {
     padding:10 10 10 15;
 }
 
+.avatarGrid{
+    margin:10 0 0 0;
+}
+
+.terraGrid{
+    margin:10 0 0 0;
+}
+
 
 .border{
     border-radius: 25;
